# tarkov_voice_overlay

./: .gitignore  CMakeLists.txt  README.md  render.yaml  vcpkg.json
client/: CMakeLists.txt
client/include/tvo/audio/: VoiceEngine.h
client/include/tvo/core/: Application.h  Types.h  VoiceSession.h
client/include/tvo/net/: DirectVoiceTransport.h  IceConfig.h  LanDiscovery.h  SignalingClient.h
client/include/tvo/platform/: AudioSettingsWindow.h  HotkeyManager.h  OverlayWindow.h  SetupWindow.h  TrayIcon.h
client/include/tvo/security/: PasswordGate.h
client/src/: main.cpp
client/src/audio/: VoiceEngine.cpp
client/src/core/: Application.cpp  VoiceSession.cpp
client/src/net/: DirectVoiceTransport.cpp  LanDiscovery.cpp  SignalingClient.cpp
client/src/platform/: AudioSettingsWindow.cpp  HotkeyManager.cpp  OverlayWindow.cpp  SetupWindow.cpp  TrayIcon.cpp
client/src/security/: PasswordGate.cpp
client/tests/: voice_session_tests.cpp
coordinator/: README.md  go.mod  main.go  render_voice_relay_test.go  room_lifecycle_test.go
docs/: build-and-acceptance.md  signaling-protocol.md
release/: PUBLIC_SERVER.txt  README_RUN.txt  TEST_REPORT.txt  allow_firewall.cmd  start_client.cmd  start_public_server.cmd  stop_client.cmd  stop_public_server.cmd  test_direct_udp_receive.cmd  test_direct_udp_receive.ps1  test_direct_udp_send.cmd  test_direct_udp_send.ps1
